# DjangoSinpMetadata

./: .flake8  README.rst  dbchiroweb.code-workspace  pyproject.toml
.github/workflows/: django.yml  poetry.yml
config/: settings.py  urls.py
dj_sinp_metadata/: apps.py
sinp_metadata/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
sinp_metadata/migrations/: 0001_initial.py  0002_project_alter_acquisitionframework_is_metaframework_and_more.py  0002_remove_organism_action_scope_and_more.py
