[tool.poetry]
name = "dj_sinp_metadata"
version = "0.1.1"
description = "Django app to manage french SINP metadata"
authors = ["dbChiro <project@dbchiro.org>",]
license = "AGPLv3"
keywords = ["Django",]
readme = "README.rst"
homepage = "https://github.com/dbchiro/DjangoSinpMetadata"
repository = "https://github.com/dbchiro/DjangoSinpMetadata"
include = [
    "LICENSE",
]
packages = [
    { include = "sinp_metadata" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
Django = "^4.1.5"
django-rest-framework = "^0.1.0"
dj-sinp-organisms = {git = "https://github.com/dbchiro/DjangoSinpOrganisms.git"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
pre-commit = "^3.2.2"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.6"
drf-yasg = "^1.21.5"


[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 79
target-version = ['py37']



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
